--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -456,6 +456,10 @@ $emoji-people: (
   /* :sandal:                                                              */ "/assets/bcd5640706c77fef963998baa5d1d168.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7d/Emoji_u1f461.svg",
   /* :santa:                                                               */ "/assets/37017a416c2a6ab030f0de3db9f6e73e.svg": "https://upload.wikimedia.org/wikipedia/commons/1/13/Emoji_u1f385.svg",
   /* :santa::skin-tone-1:                                                  */ "/assets/8567d5c31070ff2d904aa34c0498d728.svg": "https://upload.wikimedia.org/wikipedia/commons/3/38/Emoji_u1f385_1f3fb.svg",
+  /* :santa::skin-tone-2:                                                  */ "/assets/3bdd464d3e777017e192ae69aeff4e7b.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f385_1f3fc.svg",
+  /* :santa::skin-tone-3:                                                  */ "/assets/aff86787a4ad7497ce8edd504caef1ea.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c1/Emoji_u1f385_1f3fd.svg",
+  /* :santa::skin-tone-4:                                                  */ "/assets/27c25991f438b821562612b07d2be0e9.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9a/Emoji_u1f385_1f3fe.svg",
+  /* :santa::skin-tone-5:                                                  */ "/assets/06693c52dfaee40ef2cd448a7f36ed4b.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7b/Emoji_u1f385_1f3ff.svg",
   /* :school_satchel:                                                      */ "/assets/bbae6b9bd3d06c039ec917424473ee1a.svg": "https://upload.wikimedia.org/wikipedia/commons/4/41/Emoji_u1f392.svg",
   /* :scream_cat:                                                          */ "/assets/fc1ca9bdd3eb10c518fa9cc6adbb0dc0.svg": "https://upload.wikimedia.org/wikipedia/commons/0/00/Emoji_u1f640.svg",
   /* :scream:                                                              */ "/assets/9bd8b85559466379744360f8c9841f39.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7e/Emoji_u1f631.svg",
