--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -465,6 +465,10 @@ $emoji-people: (
   /* :scream:                                                              */ "/assets/9bd8b85559466379744360f8c9841f39.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7e/Emoji_u1f631.svg",
   /* :selfie:                                                              */ "/assets/b97d4816573933b53e290136980e4136.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f2/Emoji_u1f933.svg",
   /* :selfie::skin-tone-1:                                                 */ "/assets/263fab247932d4d0670a7c8b9dee37b3.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a8/Emoji_u1f933_1f3fb.svg",
+  /* :selfie::skin-tone-2:                                                 */ "/assets/8920dd978ed73101f9ac9f3c966c929d.svg": "https://upload.wikimedia.org/wikipedia/commons/4/47/Emoji_u1f933_1f3fc.svg",
+  /* :selfie::skin-tone-3:                                                 */ "/assets/64df4d6a7496621f24bfc5fdc1f3774c.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9c/Emoji_u1f933_1f3fd.svg",
+  /* :selfie::skin-tone-4:                                                 */ "/assets/4657b16c2f48de35d1940bf9ed5e303c.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5e/Emoji_u1f933_1f3fe.svg",
+  /* :selfie::skin-tone-5:                                                 */ "/assets/52016cd2bfc232c49ebe43066a8733bb.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b7/Emoji_u1f933_1f3ff.svg",
   /* :shirt:                                                               */ "/assets/d871549666e6353d20b8a60778a077e0.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ed/Emoji_u1f455.svg",
   /* :shrug:                                                               */ "/assets/656a6c9ad248051ce95bfb0bcec98ffa.svg": "https://upload.wikimedia.org/wikipedia/commons/4/47/Emoji_u1f937.svg",
   /* :shrug::skin-tone-1:                                                  */ "/assets/09009eeb2524bb2a3d8444ed3bc8c1a9.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e5/Emoji_u1f937_1f3fb.svg",
