--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -472,6 +472,10 @@ $emoji-people: (
   /* :shirt:                                                               */ "/assets/d871549666e6353d20b8a60778a077e0.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ed/Emoji_u1f455.svg",
   /* :shrug:                                                               */ "/assets/656a6c9ad248051ce95bfb0bcec98ffa.svg": "https://upload.wikimedia.org/wikipedia/commons/4/47/Emoji_u1f937.svg",
   /* :shrug::skin-tone-1:                                                  */ "/assets/09009eeb2524bb2a3d8444ed3bc8c1a9.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e5/Emoji_u1f937_1f3fb.svg",
+  /* :shrug::skin-tone-2:                                                  */ "/assets/c75491b0ecd545d6f4ec743bc4ec62bf.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9b/Emoji_u1f937_1f3fc.svg",
+  /* :shrug::skin-tone-3:                                                  */ "/assets/6ff3493a45a1dbfab1f1db6221568ae2.svg": "https://upload.wikimedia.org/wikipedia/commons/1/12/Emoji_u1f937_1f3fd.svg",
+  /* :shrug::skin-tone-4:                                                  */ "/assets/587f13ceaea211452ff933a9376cfd5e.svg": "https://upload.wikimedia.org/wikipedia/commons/3/34/Emoji_u1f937_1f3fe.svg",
+  /* :shrug::skin-tone-5:                                                  */ "/assets/e5b68a942c044cae875ce367a8cc7866.svg": "https://upload.wikimedia.org/wikipedia/commons/9/94/Emoji_u1f937_1f3ff.svg",
   /* :sign_of_the_horns::skin-tone-1:                                      */ "/assets/d502579d3922957a5d204483b217fdce.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9f/Emoji_u1f918_1f3fb.svg",
   /* :skull:                                                               */ "/assets/ca5ca83f3d1c7d60dcdba18b97d68f7e.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f0/Emoji_u1f480.svg",
   /* :sleeping:                                                            */ "/assets/9ff23cdb0da49d75de71469a6bd4725c.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b1/Emoji_u1f634.svg",
