--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -477,6 +477,10 @@ $emoji-people: (
   /* :shrug::skin-tone-4:                                                  */ "/assets/587f13ceaea211452ff933a9376cfd5e.svg": "https://upload.wikimedia.org/wikipedia/commons/3/34/Emoji_u1f937_1f3fe.svg",
   /* :shrug::skin-tone-5:                                                  */ "/assets/e5b68a942c044cae875ce367a8cc7866.svg": "https://upload.wikimedia.org/wikipedia/commons/9/94/Emoji_u1f937_1f3ff.svg",
   /* :sign_of_the_horns::skin-tone-1:                                      */ "/assets/d502579d3922957a5d204483b217fdce.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9f/Emoji_u1f918_1f3fb.svg",
+  /* :sign_of_the_horns::skin-tone-2:                                      */ "/assets/7a3ec84744e6e0394617fca3f5039594.svg": "https://upload.wikimedia.org/wikipedia/commons/6/60/Emoji_u1f918_1f3fc.svg",
+  /* :sign_of_the_horns::skin-tone-3:                                      */ "/assets/4dfeacca59de022162f050543a86bd8e.svg": "https://upload.wikimedia.org/wikipedia/commons/6/64/Emoji_u1f918_1f3fd.svg",
+  /* :sign_of_the_horns::skin-tone-4:                                      */ "/assets/0a5fbdc7c80d32521fa96c622a4482dd.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c3/Emoji_u1f918_1f3fe.svg",
+  /* :sign_of_the_horns::skin-tone-5:                                      */ "/assets/08be75152d772807077b0000a5a21bee.svg": "https://upload.wikimedia.org/wikipedia/commons/9/95/Emoji_u1f918_1f3ff.svg",
   /* :skull:                                                               */ "/assets/ca5ca83f3d1c7d60dcdba18b97d68f7e.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f0/Emoji_u1f480.svg",
   /* :sleeping:                                                            */ "/assets/9ff23cdb0da49d75de71469a6bd4725c.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b1/Emoji_u1f634.svg",
   /* :sleepy:                                                              */ "/assets/e301ba4fec009e9442b7016329d605e7.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f8/Emoji_u1f62a.svg",
