emojiNotoBlobs - :sleuth_or_spy:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -485,6 +485,10 @@ $emoji-people: (
   /* :sleeping:                                                            */ "/assets/9ff23cdb0da49d75de71469a6bd4725c.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b1/Emoji_u1f634.svg",
   /* :sleepy:                                                              */ "/assets/e301ba4fec009e9442b7016329d605e7.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f8/Emoji_u1f62a.svg",
   /* :sleuth_or_spy::skin-tone-1:                                          */ "/assets/bb285b17a5e8671df071687b4b3ce624.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8e/Emoji_u1f575_1f3fb.svg",
+  /* :sleuth_or_spy::skin-tone-2:                                          */ "/assets/7e244f7cdf045f70d2fa992b65037c7d.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ea/Emoji_u1f575_1f3fc.svg",
+  /* :sleuth_or_spy::skin-tone-3:                                          */ "/assets/1e081e5d6769e2698fb14ddad638cb7f.svg": "https://upload.wikimedia.org/wikipedia/commons/2/26/Emoji_u1f575_1f3fd.svg",
+  /* :sleuth_or_spy::skin-tone-4:                                          */ "/assets/01abbf2615ac27e519aea9b2fcfaa636.svg": "https://upload.wikimedia.org/wikipedia/commons/5/52/Emoji_u1f575_1f3fe_200d_2642.svg",
+  /* :sleuth_or_spy::skin-tone-5:                                          */ "/assets/a0f38f6f4da7127f2ec59a416a5bac3a.svg": "https://upload.wikimedia.org/wikipedia/commons/c/cc/Emoji_u1f575_1f3ff.svg",
   /* :slight_frown:                                                        */ "/assets/3b32193b9673582d2704e53ec1056b6e.svg": "https://upload.wikimedia.org/wikipedia/commons/0/00/Emoji_u1f641.svg",
   /* :slight_smile:                                                        */ "/assets/4f22736614151ae463b63a5a78aac9d9.svg": "https://upload.wikimedia.org/wikipedia/commons/9/93/Emoji_u1f642.svg",
   /* :smile_cat:                                                           */ "/assets/6eb0094a48d84f710cf75669a651fda6.svg": "https://upload.wikimedia.org/wikipedia/commons/b/ba/Emoji_u1f638.svg",
