--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -539,6 +539,10 @@ $emoji-people: (
   /* :vulcan:                                                              */ "/assets/cf154cec5ac15640f8e980ce6026178b.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f8/Emoji_u1f596.svg",
   /* :walking:                                                             */ "/assets/a3ca232394a8e24c2110860e52fba60f.svg": "https://upload.wikimedia.org/wikipedia/commons/9/96/Emoji_u1f6b6.svg",
   /* :walking::skin-tone-1:                                                */ "/assets/258d18d5481be6f8bc56cfecad5c347b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3f/Emoji_u1f6b6_1f3fb.svg",
+  /* :walking::skin-tone-2:                                                */ "/assets/cbc925e4b3ebb168ce1ed70cec87207e.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c8/Emoji_u1f6b6_1f3fc.svg",
+  /* :walking::skin-tone-3:                                                */ "/assets/0ff1c4cb37f8603c0bf30eabc3170bd8.svg": "https://upload.wikimedia.org/wikipedia/commons/9/90/Emoji_u1f6b6_1f3fd.svg",
+  /* :walking::skin-tone-4:                                                */ "/assets/736fa45147af1079de6013a6d26e2229.svg": "https://upload.wikimedia.org/wikipedia/commons/6/61/Emoji_u1f6b6_1f3fe.svg",
+  /* :walking::skin-tone-5:                                                */ "/assets/1faeb771c103949b2d24ee9bcfb5c6be.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8a/Emoji_u1f6b6_1f3ff.svg",
   /* :wave:                                                                */ "/assets/593c4a3437fbb5b89fbb148f7b96424d.svg": "https://upload.wikimedia.org/wikipedia/commons/7/70/Emoji_u1f44b.svg",
   /* :wave::skin-tone-1:                                                   */ "/assets/061ffa2a36a208deecfc76f7124c863a.svg": "https://upload.wikimedia.org/wikipedia/commons/8/81/Emoji_u1f44b_1f3fb.svg",
   /* :wave::skin-tone-2:                                                   */ "/assets/056169e50ec7619a6dfc86407f0a29f6.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a3/Emoji_u1f44b_1f3fc.svg",
