--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -553,6 +553,10 @@ $emoji-people: (
   /* :wink:                                                                */ "/assets/b277c5ffb43011a356200198cf76b22d.svg": "https://upload.wikimedia.org/wikipedia/commons/3/36/Emoji_u1f609.svg",
   /* :woman:                                                               */ "/assets/4e2293fd5dd39f9dffa4a081d49eee85.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e3/Emoji_u1f469.svg",
   /* :woman::skin-tone-1:                                                  */ "/assets/aa92f2bda490f4051d6516882110b6cc.svg": "https://upload.wikimedia.org/wikipedia/commons/1/14/Emoji_u1f469_1f3fb.svg",
+  /* :woman::skin-tone-2:                                                  */ "/assets/7e46fbe6c6637975503382f78bafab80.svg": "https://upload.wikimedia.org/wikipedia/commons/3/34/Emoji_u1f469_1f3fc.svg",
+  /* :woman::skin-tone-3:                                                  */ "/assets/61b53f31d498de4856a98dd6abf6e440.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c1/Emoji_u1f469_1f3fd.svg",
+  /* :woman::skin-tone-4:                                                  */ "/assets/e6625196ca50fc8eef9a17bf3dd5351d.svg": "https://upload.wikimedia.org/wikipedia/commons/6/60/Emoji_u1f469_1f3fe.svg",
+  /* :woman::skin-tone-5:                                                  */ "/assets/dc86131f2a0d2aa9f34acfdd5e86d60a.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6d/Emoji_u1f469_1f3ff.svg",
   /* :womans_clothes:                                                      */ "/assets/107ffb947b49100f34ab72d32093da4a.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b7/Emoji_u1f45a.svg",
   /* :womans_hat:                                                          */ "/assets/92808c626aa527f9f0a643744dccf49a.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5f/Emoji_u1f452.svg",
   /* :worried:                                                             */ "/assets/468d61fd9fd55d3f5d905005d2180daa.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a6/Emoji_u1f61f.svg",
