--- a/emojiNotoBlobs/emojiNotoBlobs.theme.css
+++ b/emojiNotoBlobs/emojiNotoBlobs.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiNotoBlobs","description":"Brings Noto's blob emojis to Discord. Support server: http://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiNotoBlobs","description":"Bringing Android Nougat's Noto Color emojis to Discord. Support server: http://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiNotoBlobs/dist/themefile.css");
 
