--- a/emojiNotoBlobs/src/_emoji-travel.scss
+++ b/emojiNotoBlobs/src/_emoji-travel.scss
@@ -10,7 +10,7 @@ $emoji-travel: (
   /* :bank:                               */ "/assets/987e6e5ad6b73717f167e124c9776eb3.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1c/Emoji_u1f3e6.svg",
   /* :beach:                              */ "/assets/275ae7c450b8262543d6a60e97642016.svg": "https://upload.wikimedia.org/wikipedia/commons/c/ce/Emoji_u1f3d6.svg",
   /* :bike:                               */ "/assets/632c03a087369e4cc9f0e429acb17440.svg": "https://upload.wikimedia.org/wikipedia/commons/9/98/Emoji_u1f6b2.svg",
-  /* :blue_car:                           */ "/assets/1069ee1509716f8152b09f8c5b79ca11.svg": "https://hansanonymous.github.io/files/emojis/emoji_u1f697.svg",
+  /* :blue_car:                           */ "/assets/1069ee1509716f8152b09f8c5b79ca11.svg": "https://upload.wikimedia.org/wikipedia/commons/4/47/Emoji_u1f697.svg",
   /* :bridge_at_night:                    */ "/assets/44f1bf70f1494c759b9bf0afc95304fd.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b8/Emoji_u1f309.svg",
   /* :bullettrain_front:                  */ "/assets/7794fd0349081f37e74c0c9c4a68a76f.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0b/Emoji_u1f684.svg",
   /* :bullettrain_side:                   */ "/assets/649b6ae054a45fc6e999ba9a67b91b11.svg": "https://upload.wikimedia.org/wikipedia/commons/9/93/Emoji_u1f685.svg",
@@ -81,8 +81,8 @@ $emoji-travel: (
   /* :railway_car:                        */ "/assets/ebaa233b5d57ee7c8be025e7b5a705b0.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3d/Emoji_u1f683.svg",
   /* :railway_track:                      */ "/assets/06f47dd9f4c2d8bc7814832bfe0cb46f.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ad/Emoji_u1f6e4.svg",
   /* :rainbow:                            */ "/assets/4691e32e64eb0d4c43f29252415cfd61.svg": "https://upload.wikimedia.org/wikipedia/commons/6/67/Emoji_u1f308.svg",
-  /* :red_car:                            */ "/assets/e95285636dd8086f3b383f4291d32761.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e1/Twemoji2_1f697.svg",
-  /* :rice_scene:                         */ "/assets/ae5602ae96ca86cd8758f83cc83578bf.svg": "https://upload.wikimedia.org/wikipedia/commons/5/58/Emoji_u1f33e.svg",
+  /* :red_car:                            */ "/assets/e95285636dd8086f3b383f4291d32761.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9e/Emoji_u1f699.svg",
+  /* :rice_scene:                         */ "/assets/ae5602ae96ca86cd8758f83cc83578bf.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4b/Emoji_u1f391.svg",
   /* :rocket:                             */ "/assets/bc84b70369161737d127f8ed288dd43f.svg": "https://upload.wikimedia.org/wikipedia/commons/5/57/Emoji_u1f680.svg",
   /* :roller_coaster:                     */ "/assets/cda117c8a77c5586180130e7dd84c9c9.svg": "https://upload.wikimedia.org/wikipedia/commons/1/10/Emoji_u1f3a2.svg",
   /* :rotating_light:                     */ "/assets/6bf5a182b60b806be39de28837ecbaa1.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c7/Emoji_u1f6a8.svg",
@@ -96,7 +96,7 @@ $emoji-travel: (
   /* :sparkler:                           */ "/assets/16b88c2a4eaaf06abb389d8b7c06bb39.svg": "https://upload.wikimedia.org/wikipedia/commons/7/76/Emoji_u1f387.svg",
   /* :speedboat:                          */ "/assets/6a134d6b7933d5d66f8accfe0931beca.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c1/Emoji_u1f6a4.svg",
   /* :stadium:                            */ "/assets/94d120956308f3a8d120f10fca3c321e.svg": "https://upload.wikimedia.org/wikipedia/commons/8/87/Emoji_u1f3df.svg",
-  /* :stars:                              */ "/assets/fbc0ca8cac9f43e794b676cb7fd6cc9b.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d3/Fxemoji_u1F30C.svg",
+  /* :stars:                              */ "/assets/fbc0ca8cac9f43e794b676cb7fd6cc9b.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ee/Emoji_u1f320.svg",
   /* :station:                            */ "/assets/3087acef97d5f2b28f0317cf114c6811.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d6/Emoji_u1f689.svg",
   /* :statue_of_liberty:                  */ "/assets/7b09d6f8dbf82ad8e8374273804923a8.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e6/Emoji_u1f5fd.svg",
   /* :steam_locomotive:                   */ "/assets/c2359deddfc0aeeb0dadfd0e2e053e7f.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c7/Emoji_u1f682.svg",
@@ -109,7 +109,7 @@ $emoji-travel: (
   /* :tokyo_tower:                        */ "/assets/4cc687393878e00af08aeb97c3856ff0.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f3/Emoji_u1f5fc.svg",
   /* :tractor:                            */ "/assets/7ef22cb858ff3d144e47595c8effde2a.svg": "https://upload.wikimedia.org/wikipedia/commons/3/39/Emoji_u1f69c.svg",
   /* :traffic_light:                      */ "/assets/a933220a202b461a84eb8eec5294d484.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4b/Emoji_u1f6a5.svg",
-  /* :train:                              */ "/assets/aee074549ff73c22cf56f61bc7acadc1.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f686.svg",
+  /* :train:                              */ "/assets/aee074549ff73c22cf56f61bc7acadc1.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0a/Emoji_u1f68b.svg",
   /* :train2:                             */ "/assets/acf8872f0f7b0f28966106dd96cde2f5.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f686.svg",
   /* :tram:                               */ "/assets/b419ee03f12c909d7bb8a41f05a48628.svg": "https://upload.wikimedia.org/wikipedia/commons/c/cf/Emoji_u1f68a.svg",
   /* :trolleybus:                         */ "/assets/85eb4cfbe4893aaa2198d9b6656ae418.svg": "https://upload.wikimedia.org/wikipedia/commons/0/04/Emoji_u1f68e.svg",
