codeblockLangIdentifier - add objc

--- a/codeblockLangIdentifier/codeblockLangIdentifier.theme.css
+++ b/codeblockLangIdentifier/codeblockLangIdentifier.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"codeblockLangIdentifier","description":"Shows the corresponding language's syntax highlighting that was used on the code block. Support server: http://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"codeblockLangIdentifier","description":"Shows the corresponding language's syntax highlighting that was used on the code block. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/codeblockLangIdentifier/dist/themefile.css");
 
