--- a/codeblockLangIdentifier/src/_languages.scss
+++ b/codeblockLangIdentifier/src/_languages.scss
@@ -119,7 +119,7 @@ $languages: (
     "Nimrod": "nimrod",
     "Nix": "nix",
     "NSIS": "nsis",
-    "Objective-C": "objectivec",
+    "Objective-C": ("objectivec", "objc"),
     "OCaml": "ocaml",
     "OpenSCAD": ("openscad", "scad"),
     "Oracle Rules Language": "ruleslanguage",
