Update some of the BetterDiscord theme files

--- a/roleRevert/roleRevert.theme.css
+++ b/roleRevert/roleRevert.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"roleRevert","description":"Bringing back how the roles used to look like. Support server: http://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"roleRevert","description":"Bringing back how the roles used to look like. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/roleRevert/dist/themefile.css");
 
