--- a/titlebarMacOS/titlebarMacOS.theme.css
+++ b/titlebarMacOS/titlebarMacOS.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"titlebarMacOS","description":"macOS' traffic light window controls look on Discord. Support server: http://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"titlebarMacOS","description":"macOS' traffic light window controls look on Discord. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/titlebarMacOS/dist/themefile.css");
 
