--- a/titlebarRevert/titlebarRevert.theme.css
+++ b/titlebarRevert/titlebarRevert.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"titlebarRevert","description":"Reverts the titlebar on Windows to the old look. Support server: http://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"titlebarRevert","description":"Reverts the titlebar on Windows to the old look. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/titlebarRevert/dist/themefile.css");
 
