emojiNotoColor - some more emoji fix-a-thon

--- a/emojiNotoColor/src/_emoji-objects.scss
+++ b/emojiNotoColor/src/_emoji-objects.scss
@@ -1,6 +1,7 @@
 $emoji-objects: (
   /* :alarm_clock:                        */ "/assets/02b72128433bb14721cfa96689722dac.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u23f0.svg",
   /* :alembic:                            */ "/assets/2bab4c60959e6a163bcac46e012a613c.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u2697.svg",
+  /* :amphora                             */ "/assets/de1a2435b75d7424d1b2b907114ae688.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f3fa.svg",
   /* :balloon:                            */ "/assets/1b728acb33beb9640f696250c3de170d.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f388.svg",
   /* :ballot_box:                         */ "/assets/8d2d76ac3edd946edd24776ac421b921.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f5f3.svg",
   /* :bar_chart:                          */ "/assets/79a590ea84f8e3a347aa62b32b78e0d5.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f4ca.svg",
@@ -45,6 +46,7 @@ $emoji-objects: (
   /* :crossed_flags:                      */ "/assets/b5c7ee42504027bef1d01c238f8229f6.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f38c.svg",
   /* :crossed_swords:                     */ "/assets/54e1b293350b4fdc172e2b5fb7e28bd8.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u2694.svg",
   /* :crystal_ball:                       */ "/assets/1c0daf2a40e63a1f59c1ae036c19adf7.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f52e.svg",
+  /* :dagger:                             */ "/assets/6a0cd251193e14e8fef4b258072f7400.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f5e1.svg",
   /* :date:                               */ "/assets/644ab12f2f874b0c5fb5b5b5f88a0bef.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f5d3.svg",
   /* :desktop:                            */ "/assets/e2154b14424ed3161ed7a51b0f06d07e.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f5a5.svg",
   /* :dividers:                           */ "/assets/312bf4b5ed50687d0fa58dd59a3a54c8.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f5c2.svg",
@@ -63,6 +65,7 @@ $emoji-objects: (
   /* :film_frames:                        */ "/assets/a9c4bdab2900a9549cc718509c3ce323.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f39e.svg",
   /* :flag_black:                         */ "/assets/183718e983ac8ed0bc00c0c485ee8d7e.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f3f4.svg",
   /* :flag_white:                         */ "/assets/1cc9f49b88b3373dd11112833af08826.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f3f3.svg",
+  /* :flags:                              */ "/assets/711fda2ac0c54e27bff54fd9a0d13565.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f38f.svg",
   /* :flashlight:                         */ "/assets/71a39123ea46d6cccac08a3754b4f7f5.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f526.svg",
   /* :floppy_disk:                        */ "/assets/d049def26c077694f4f184be88cea9bb.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f4be.svg",
   /* :frame_photo:                        */ "/assets/8237092de4f32d8777ab016b5fc8c093.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f5bc.svg",
