--- a/emojiNotoBlobs/src/_emoji-food.scss
+++ b/emojiNotoBlobs/src/_emoji-food.scss
@@ -50,6 +50,7 @@ $emoji-food: (
   /* :lemon:                              */ "/assets/bea76643724cd4de0da49b16f54eb1e9.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f34b.svg",
   /* :lollipop:                           */ "/assets/004173a26af5bc31aa3ec9db2ad31eb5.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f36d.svg",
   /* :meat_on_bone:                       */ "/assets/be462f59d47da4a9314c1dc11842136e.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f356.svg",
+  /* :melon:                              */ "/assets/a2c2224e27cb6739fa8c8074b0ed2733.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f348.png",
   /* :milk:                               */ "/assets/c8cab949ce51b231d2b9b516f022b23e.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f95b.svg",
   /* :oden:                               */ "/assets/a5363ca427118a229f8449f1abe5690f.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f362.svg",
   /* :pancakes:                           */ "/assets/6427eab8ed2ba33a8d4d6fb6fc1217a8.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f95e.svg",
