--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -74,11 +74,11 @@ $emoji-people: (
   /* :cop::skin-tone-3:                                                    */ "/assets/013ce7c7b8232cca46cc3b40a8d8622a.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f46e_1f3fd.svg",
   /* :cop::skin-tone-4:                                                    */ "/assets/0d1bca5946c6910e27d957929827ff37.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f46e_1f3fe.svg",
   /* :cop::skin-tone-5:                                                    */ "/assets/71b739606c8968070acbbc8b60b07d42.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f46e_1f3ff.svg",
-  /* :couple_mm:                                                           */ "/assets/e865d927daed301ac4ce03102a064560.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f468_200d_2764_fe0f_200d_1f468.svg",
-  /* :couple_with_heart:                                                   */ "/assets/c51dd8cca368c0cd8eeb017e96d2c168.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f491.svg",
-  /* :couple_ww:                                                           */ "/assets/4f916b4d4139b90b19ffb3eeb8e376f6.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f469_200d_2764_fe0f_200d_1f469.svg",
+  /* :couple_mm:                                                           */ // "/assets/e865d927daed301ac4ce03102a064560.svg": "",
+  /* :couple_with_heart:                                                   */ // "/assets/c51dd8cca368c0cd8eeb017e96d2c168.svg": "",
+  /* :couple_ww:                                                           */ // "/assets/4f916b4d4139b90b19ffb3eeb8e376f6.svg": "",
   /* :couple:                                                              */ "/assets/16f6089f47c4fb7b7bdf8ae57bfd4351.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f46b.svg",
-  /* :couplekiss:                                                          */ "/assets/175753f47c4d8f06b4977920479a27d3.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f48f.svg",
+  /* :couplekiss:                                                          */ // "/assets/175753f47c4d8f06b4977920479a27d3.svg": "",
   /* :cowboy:                                                              */ "/assets/984390b3eefc024ea770ccbfcfbdc4e2.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f920.svg",
   /* :crown:                                                               */ "/assets/779fb0d7cf9afd16249ff8f82f0450e4.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f451.svg",
   /* :cry:                                                                 */ "/assets/2a6e66e7de157c4051fb7abf7d8b0063.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f622.svg",
@@ -200,8 +200,8 @@ $emoji-people: (
   /* :joy_cat:                                                             */ "/assets/9d0105dee7788a1fd4afbafe46dbd49b.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f639.svg",
   /* :joy:                                                                 */ "/assets/cae9e3b02af6e987442df2953de026fc.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f602.svg",
   /* :kimono:                                                              */ "/assets/d0e1b6e9b80de517cc572abb68e15591.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f458.svg",
-  /* :kiss_mm:                                                             */ "/assets/77d250b4aa50598b06e2d4a756914677.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f468_200d_2764_fe0f_200d_1f48b_200d_1f468.svg",
-  /* :kiss_ww:                                                             */ "/assets/815fb767303df6eda484a4f6632bb767.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f469_200d_2764_fe0f_200d_1f48b_200d_1f469.svg",
+  /* :kiss_mm:                                                             */ // "/assets/77d250b4aa50598b06e2d4a756914677.svg": "",
+  /* :kiss_ww:                                                             */ // "/assets/815fb767303df6eda484a4f6632bb767.svg": "",
   /* :kiss:                                                                */ "/assets/0f7bf0aae65b06ec5a342ae10c4b1856.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f48b.svg",
   /* :kissing_cat:                                                         */ "/assets/6330fe0d9849ac31f42a4421c38507e5.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f63d.svg",
   /* :kissing_closed_eyes:                                                 */ "/assets/d1fa903a61500ee1c3d43d3751ceff8a.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f61a.svg",
