--- a/emojiNotoColor/src/_emoji-symbols.scss
+++ b/emojiNotoColor/src/_emoji-symbols.scss
@@ -225,6 +225,7 @@ $emoji-symbols: (
   /* :restroom:                           */ "/assets/5a1b5dcd927cc2f1905c61dd3d9ddedd.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f6bb.svg",
   /* :revolving_hearts:                   */ "/assets/3c9de8245e086437984f22da3f736eb6.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f49e.svg",
   /* :rewind:                             */ "/assets/c3fca1ffab05a4501f900a6bb1a302fe.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u23ea.svg",
+  /* :sa:                                 */ "/assets/13137c4757a80d3a557ccbe1dcb2326c.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f202.png",
   /* :sagittarius:                        */ "/assets/44bf674252a9c89f206b22b9408b38c0.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u2650.svg",
   /* :scorpius:                           */ "/assets/d8e1fbb0777c26064bf815397ba1d188.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u264f.svg",
   /* :secret:                             */ "/assets/535a5bdaf87e40b15cf81d8bfee80f79.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u3299.svg",
