--- a/emojiOne3/emojiOne3.theme.css
+++ b/emojiOne3/emojiOne3.theme.css
@@ -1,6 +1,6 @@
-/*//META{"name":"emojiNotoColor","description":"Bringing the emoji from Android Oreo's Noto Color Emoji set to Discord. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiOne3","description":"Bringing the emoji from EmojiOne v3 set to Discord. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
 
-@import url("https://intrnl.github.io/discordcustomizations/emojiNotoColor/dist/themefile.css");
+@import url("https://intrnl.github.io/discordcustomizations/emojiOne3/dist/themefile.css");
 
 /*
   There are no user-customizable variables for this theme.
