--- a/emojiNotoBlobs/src/_emoji-symbols.scss
+++ b/emojiNotoBlobs/src/_emoji-symbols.scss
@@ -101,6 +101,7 @@ $emoji-symbols: (
   /* :eject                               */ "/assets/e6ece1659e7c0e6f4ebd17bae7a8fc2f.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u23cf.svg",
   /* :end:                                */ "/assets/4162176664cb7ec52ed19754b6818672.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f51a.svg",
   /* :exclamation:                        */ "/assets/0c4468aed0c4f665cc1ed5e5b07b52de.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u2757.svg",
+  /* :eye_in_speech_bubble:               */ "/assets/4a03a6605e65f9adb0684458cccd0963.svg": "https://intrnl.github.io/assetsEmoji/NotoColorOreo/emoji_u1f441_200d_1f5e8.svg",
   /* :fast_foward:                        */ "/assets/53596500301b5ee4d5e2deaed3acd17c.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u23e9.svg",
   /* :five:                               */ "/assets/354a7b2558484b0a74ddd389e5a37ff7.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u0035_20e3.svg",
   /* :fleur_de_lis:                       */ "/assets/d21da75a5b9c2deaf4db75c80e28433e.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u269c.svg",
@@ -244,6 +245,7 @@ $emoji-symbols: (
   /* :sparkling_heart:                    */ "/assets/a42df564f00ed8bbca652dc9345d3834.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f496.svg",
   /* :speaker:                            */ "/assets/f0fa3c1e815fa570f97b21eec4c666dd.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f508.svg",
   /* :speech_balloon:                     */ "/assets/0b6fc9f58ca3827977d546a6ee0ca3e7.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f4ac.svg",
+  /* :speech_left:                        */ "/assets/cf7f3e86b93c14f8e53feac55a1b637f.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u1f5e8.svg",
   /* :star_and_crescent:                  */ "/assets/8ecfe6ea3c44693dfb128a5270c0bbc8.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u262a.svg",
   /* :star_of_david:                      */ "/assets/b2581a7ae3d50d6ee9320746765d7198.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u2721.svg",
   /* :stop_button:                        */ "/assets/76bb3e920ff642a218226a6c8a4cbc07.svg": "https://intrnl.github.io/assetsEmoji/NotoColorNougat/emoji_u23f9.svg",
