Remove support server.

--- a/emojiNotoBlobs/emojiNotoBlobs.theme.css
+++ b/emojiNotoBlobs/emojiNotoBlobs.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiNotoBlobs","description":"Bringing the blobs emoji from Android Nougat's Noto Color Emoji set to Discord. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiNotoBlobs","description":"Bringing the blobs emoji from Android Nougat's Noto Color Emoji set to Discord.","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiNotoBlobs/dist/themefile.css");
 
