--- a/emojiOne3/emojiOne3.theme.css
+++ b/emojiOne3/emojiOne3.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiOne3","description":"Bringing the emoji from EmojiOne v3 set to Discord. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiOne3","description":"Bringing the emoji from EmojiOne v3 set to Discord.","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiOne3/dist/themefile.css");
 
