--- a/emojiApple/emojiApple.theme.css
+++ b/emojiApple/emojiApple.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiApple","description":"Bringing the emoji from Apple Color Emoji set to Discord. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiApple","description":"Bringing the emoji from Apple Color Emoji set to Discord.","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiApple/dist/themefile.css");
 
