--- a/emojiNotoColor/emojiNotoColor.theme.css
+++ b/emojiNotoColor/emojiNotoColor.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiNotoColor","description":"Bringing the emoji from Android Oreo's Noto Color Emoji set to Discord. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiNotoColor","description":"Bringing the emoji from Android Oreo's Noto Color Emoji set to Discord.","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiNotoColor/dist/themefile.css");
 
