--- a/memberlistOverview/memberlistOverview.theme.css
+++ b/memberlistOverview/memberlistOverview.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"memberlistOverview","description":"Smaller member list when not hovered. Support server: https://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"memberlistOverview","description":"Smaller member list when not hovered.","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/memberlistOverview/dist/themefile.css");
 
