--- a/discordImprovements/src/_invitemodal.scss
+++ b/discordImprovements/src/_invitemodal.scss
@@ -216,6 +216,113 @@ $invitemodal-width: 440px;
           color: #72767d;
         }
       }
+      .checkbox {
+        pointer-events: none;
+        display: flex;
+        flex-direction: row;
+
+        .checkbox-inner + span {
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 24px;
+          cursor: default;
+          order: 1;
+          flex-grow: 1;
+          margin: 0;
+
+          .theme-dark & {
+            color: #f6f6f7;
+          }
+          .theme-light & {
+            color: #4f545c;
+          }
+        }
+        .checkbox-inner {
+          pointer-events: all;
+          order: 2;
+          height: 24px;
+          width: 42px;
+
+          span {
+            background-color: #72767d;
+            box-shadow: inset 0 1px 1px rgba(0,0,0,.15);
+            height: inherit;
+            width: inherit;
+            border: 0 !important;
+            border-radius: 14px;
+            overflow: hidden;
+
+            &::before {
+              background-color: #000;
+              opacity: 0;
+              content: "";
+              display: block;
+              position: absolute;
+              top: 0;
+              bottom: 0;
+              left: 0;
+              right: 0;
+            }
+            &::after {
+              background-color: #fff;
+              box-shadow: 0 2px 4px rgba(0,0,0,.3);
+              transition: transform .15s ease-in-out, width .1s ease-in-out, left .1s ease-in-out;
+              transform: none;
+              display: block !important;
+              content: "";
+              height: 18px;
+              width: 18px;
+              margin: 3px;
+              border: 0;
+              border-radius: 9px;
+              position: absolute;
+              top: 0;
+              left: 0;
+            }
+          }
+          input {
+            &[type="checkbox"]:checked + span {
+              background-color: #7289da;
+
+              &::after {
+                transform: translate3d(18px,0,0);
+              }
+            }
+          }
+        }
+        &:active {
+          .checkbox-inner {
+            span {
+              &::before {
+                opacity: .2;
+              }
+              &::after {
+                width: 26px;
+              }
+            }
+            input[type="checkbox"]:checked + span {
+              &::after {
+                width: 26px;
+                left: -8px;
+              }
+            }
+          }
+        }
+      }
+      .help-text {
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 20px;
+        cursor: default;
+        margin: 4px 0 0 0;
+
+        .theme-dark & {
+          color: #72767d;
+        }
+        .theme-light & {
+          color: hsla(218,5%,47%,.6);
+        }
+      }
     }
 
     .Select {
@@ -277,6 +384,16 @@ $invitemodal-width: 440px;
           bottom: 3px;
         }
       }
+      &.is-pseudo-focused {
+        .Select-value-label {
+          .theme-dark & {
+            color: #f6f6f7;
+          }
+          .theme-light & {
+            color: #4f545c;
+          }
+        }
+      }
     }
 
     .btn {
@@ -304,6 +421,7 @@ $invitemodal-width: 440px;
 
         &:hover {
           background-color: #677bc4;
+          text-decoration: none;
         }
       }
       &.btn-default {
